force-app/main/default/objects/API__c/API__c.object-meta.xml
<CustomObject>
    <label>API</label>
    <nameField>
        <label>API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>APIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>