force-app/main/default/objects/API__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <label>Apex Class</label>
    <type>TextArea</type>
</CustomField>