force-app/main/default/objects/API__c/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <label>Credential</label>
    <type>TextArea</type>
</CustomField>