force-app/main/default/objects/API__c/fields/Destination_System__c.field-meta.xml
<CustomField>
    <fullName>Destination_System__c</fullName>
    <formula>IF( ISPICKVAL(Source__c, &apos;Salesforce&apos;),
			&apos;Web Service&apos;,
			IF( ISPICKVAL(Source__c,&apos;Web Service&apos;),
																&apos;Salesforce&apos;,
																&apos;&apos;)
															)</formula>
    <label>Destination System</label>
    <type>Text</type>
</CustomField>