force-app/main/default/objects/API__c/fields/HTTP_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Content_Type__c</fullName>
    <label>HTTP Content Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>