force-app/main/default/objects/API__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REST</fullName>
            </value>
            <value>
                <fullName>SOAP</fullName>
            </value>
            <value>
                <fullName>By File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>