force-app/main/default/objects/API__c/listViews/Inbound_APIs.listView-meta.xml
<ListView>
    <fullName>Inbound_APIs</fullName>
    <columns>NAME</columns>
    <columns>Apex_Class__c</columns>
    <columns>HTTP_Method__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>API__c.Inbound</value>
    </filters>
    <label>Input API&apos;s</label>
</ListView>